change to modal

--- a/templates/lightbox.html.twig
+++ b/templates/lightbox.html.twig
@@ -15,7 +15,7 @@
  * @ingroup themeable
  */
 #}
-<div{{ attributes.addClass('lightbox') }}>
+<div{{ attributes.addClass('modal') }}>
   {% if content %}
     {{- content -}}
   {% endif %}
