--- a/templates/modal.html.twig
+++ b/templates/modal.html.twig
@@ -1,16 +1,16 @@
 {#
 /**
- * @file lightbox.html.twig
- * Default theme implementation to present Lightbox data.
+ * @file modal.html.twig
+ * Default theme implementation to present Modal data.
  *
- * This template is used when viewing Lightbox pages.
+ * This template is used when viewing Modal pages.
  *
  *
  * Available variables:
  * - content: A list of content items. Use 'content' to print all content, or
  * - attributes: HTML attributes for the container element.
  *
- * @see template_preprocess_lightbox()
+ * @see template_preprocess_modal()
  *
  * @ingroup themeable
  */
